--- a/css/styles.css
+++ b/css/styles.css
@@ -195,8 +195,8 @@ body {
 
 .button-arrow:hover .button-arrow__icon {
   fill: currentColor;
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
+  -webkit-transform: scale(-1);
+          transform: scale(-1);
   -webkit-animation: icon-arrow .5s linear;
           animation: icon-arrow .5s linear;
 }
@@ -206,15 +206,11 @@ body {
     -webkit-transform: translateX(15px);
             transform: translateX(15px);
   }
-  50% {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-  }
   100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
+    -webkit-transform: scale(-1);
+            transform: scale(-1);
   }
 }
 
@@ -223,15 +219,11 @@ body {
     -webkit-transform: translateX(15px);
             transform: translateX(15px);
   }
-  50% {
-    -webkit-transform: rotate(90deg);
-            transform: rotate(90deg);
-  }
   100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
+    -webkit-transform: scale(-1);
+            transform: scale(-1);
   }
 }
 
