--- a/css/styles.css
+++ b/css/styles.css
@@ -686,6 +686,20 @@ body {
   position: relative;
 }
 
+.audio__info--right {
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+@media (max-width: 767px) {
+  .audio__info--right {
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+  }
+}
+
 .audio__block {
   padding: 30px;
 }
@@ -719,6 +733,9 @@ body {
   width: 100%;
   height: 100%;
   min-height: 300px;
+  -webkit-box-ordinal-group: 1;
+      -ms-flex-order: 0;
+          order: 0;
 }
 
 .contact h1 {
