--- a/scss/modules/_compositions.scss
+++ b/scss/modules/_compositions.scss
@@ -9,11 +9,37 @@
     &__info {
         position: relative;
 
+        &::after {
+            top: 50%;
+            z-index: 1;
+            transform: translateY(-50%);
+            
+        }
+        &--left::after {
+            @include triangle(#f6f6f6, 12px, right);
+            right: 0;
+        }
+
         &--right {
             order: 1;
 
+            &::after {
+                @include triangle(#f6f6f6, 12px, left);
+                left: 0;
+            }
+
             @media (max-width: $mobile) {
                 order: 0;
+            }
+        }
+
+        @media (max-width: $mobile) {
+            &::after {
+                @include triangle(#f6f6f6, 12px, down);
+                top: auto;
+                bottom: -24px;
+                left: 50%;
+                transform: translateX(-50%);
             }
         }
     }
