--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,21 +1,19 @@
 // Base
-@import "base/_variables";
-@import "base/_mixins";
-@import "base/_reset";
+@import 'base/_variables';
+@import 'base/_mixins';
+@import 'base/_reset';
 
 // Layout
-@import "layout/_general";
-@import "layout/_buttons";
-@import "layout/_date";
-@import "layout/_title";
-@import "layout/_social";
-
-
-
-
+@import 'layout/_general';
+@import 'layout/_buttons';
+@import 'layout/_date';
+@import 'layout/_title';
+@import 'layout/_social';
 
 // Page styles
-@import "modules/_header";
-@import "modules/_disco";
-@import "modules/_compositions";
-@import "modules/_contact";
+@import 'modules/_header';
+@import 'modules/_disco';
+@import 'modules/_compositions';
+@import 'modules/_tours';
+@import 'modules/_tracks';
+@import 'modules/_contact';
